# postomat-client

./: .gitignore  README.md  pyproject.toml
src/postomat_client/: __init__.py  db.py
