[project]
name = "postomat-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.4",
    "cattrs>=25.3",
    "httpx>=0.28",
    "psycopg[binary,pool]>=3.2",
    "pyhumps>=3.8",
]
classifiers = ["Private :: Do Not Upload"]

[tool.basedpyright]
exclude = [
    ".jj/*",
    ".ruff_cache/*",
    ".venv/*",
    "dist/*",
    "postomat_client.egg-info/*",
    "uv.lock",
]

[dependency-groups]
dev = [
    "ruff>=0.14",
]
